# torch_cuda_example

./: README.md
Dockerfile/: Dockerfile  README.md
custom_linear_ops/: README.md
custom_linear_ops/custom_nn_linear/: custom_nn_linear.cu  custom_nn_linear.h  ext.cpp  setup.py  test.py
custom_linear_ops/custom_nn_linear/custom_nn_linear/: __init__.py
custom_linear_ops/custom_nn_linear/src/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  torch_custom_nn_linear.h  torch_custom_nn_linear_impl.cu  torch_custom_nn_linear_impl.h
simple_cuda_ops/: README.md
simple_cuda_ops/cmake_compilation/src/: custom_add.cpp
simple_cuda_ops/jit_compilation/: custom_add.cu
simple_cuda_ops/pip_compilation/: setup.py
template_of_pytorch_differentiable_ops/: README.md
template_of_pytorch_differentiable_ops/torch_ops_template/: setup.py  torch_ops_template.cu  torch_ops_template.h
template_of_pytorch_differentiable_ops/torch_ops_template/src/: auxiliary.h  torch_template.h  torch_template_impl.h
template_of_pytorch_differentiable_ops/torch_ops_template/torch_ops_template/: __init__.py
torch_ops_template/: README.md
torch_ops_template/torch_ops_template/: ext.cpp  test.py  torch_ops_template.cu
torch_ops_template/torch_ops_template/src/: config.h  torch_template_impl.cu
wrap_simple_cuda_via_torch/cmake_compilation/: CMakeLists.txt  custom_add_test.py  install.sh
wrap_simple_cuda_via_torch/jit_compilation/: custom_add.cpp  custom_add.h  custom_add_test.py
wrap_simple_cuda_via_torch/pip_compilation/: custom_add_test.py
(+2 files in other folders)
